# r-mcpsec

./: .gitignore  rust-claude-client-architecture.md
.devcontainer/: devcontainer.json
claude-token-monitor/: .env.example  Cargo.toml  README.md  SBOM.spdx  SECURITY_ANALYSIS.md  build.rs  debug-test.md  test_ui.sh
claude-token-monitor/.cargo/: config.toml
claude-token-monitor/docs/: system-flow.md
claude-token-monitor/scripts/: security-audit.sh
claude-token-monitor/src/: lib.rs  main.rs
claude-token-monitor/src/models/: credentials.rs  mod.rs
claude-token-monitor/src/services/: file_monitor.rs  mod.rs  session_tracker.rs  token_monitor.rs
claude-token-monitor/src/ui/: mod.rs  ratatui_ui.rs
claude-token-monitor/tests/: integration_tests.rs
rust-client/: Cargo.toml
