[package]
name = "claude-token-monitor"
version = "0.2.3"
edition = "2021"
description = "Lightweight Rust client for Claude token usage monitoring"
authors = ["Chris Phillips <chris@adiuco.com>"]
license = "MIT"
repository = "https://github.com/teamktown/claude-token-monitor"
keywords = ["claude", "token", "monitoring", "cli", "ai"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
humantime = "2.1"
crossterm = "0.27"
colored = "2.0"
ratatui = "0.28"
dirs = "5.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
uuid = { version = "1.0", features = ["v4"] }
notify = "6.0"
walkdir = "2.0"
rand = "0.8"
futures = "0.3"
atty = "0.2"

[dev-dependencies]
tempfile = "3.0"

[build-dependencies]
chrono = { version = "0.4", features = ["serde"] }